tests/rgs/valid/declarations_only.rgs
STORY  a PRIORITY 1.
ACTION run.
EVENT  spotted ENVIRONMENT.
CONDITION is_tired MYSELF.
