tests/rgs/syntax_errors/action_missing_period.rgs
ACTION run
EVENT spotted ENVIRONMENT.
